--- a/day-1-flexbox/3-flexbox-grid/begin/css/flexbox.css
+++ b/day-1-flexbox/3-flexbox-grid/begin/css/flexbox.css
@@ -31,6 +31,10 @@ div img {
 }
 
 /* grid system -- mobile first! */
+.row{
+	display: flex;
+	flex-flow: row wrap;
+}
 
 
 /* Mobile Landscape Screen Sizes */
