Added colors for different cols

--- a/day-1-flexbox/3-flexbox-grid/begin/css/flexbox.css
+++ b/day-1-flexbox/3-flexbox-grid/begin/css/flexbox.css
@@ -44,6 +44,18 @@ div img {
 	background-color:#ffc;
 }
 
+.col-2{
+	background-color:#ccf;
+}
+
+.col-3{
+	background-color:#fcf;
+}
+
+.col-4{
+	background-color:#cff;
+}
+
 /* Mobile Landscape Screen Sizes */
 @media only screen and (min-width: 480px)  {
 
