--- a/day-1-flexbox/3-flexbox-grid/begin/css/flexbox.css
+++ b/day-1-flexbox/3-flexbox-grid/begin/css/flexbox.css
@@ -38,9 +38,11 @@ div img {
 
 [class*="col-"]{
 	margin-left:4%;
+	flex-basis: 92%;
 }
 
-.col-1{
+.col-1-2,
+.col-1-4{
 	background-color:#ffc;
 }
 
@@ -58,11 +60,20 @@ div img {
 
 /* Mobile Landscape Screen Sizes */
 @media only screen and (min-width: 480px)  {
-
+	.col-1-2,
+	.col-2{
+		flex-basis: 44%;
+	}
+	.col-1-4,
+	.col-3,
+	.col-4{
+		flex-basis: 92%;
+	}
 }
 /* Desktop screen Sizes */
 @media only screen and (min-width: 768px) {
-	.col-1{
+	.col-1-4,
+	.col-1-2{
 		flex-basis: 20%;
 	}
 	.col-2{
