--- a/day-1-flexbox/5-image-gallery/begin/gallery.css
+++ b/day-1-flexbox/5-image-gallery/begin/gallery.css
@@ -13,8 +13,22 @@ ul {
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
+	display: flex;
+	flex-wrap: wrap;
+}
+li{
+	flex-basis:100%
+}
+img{
+	width: 100%;
 }
 @media (min-width: 550px) {
+	li{
+		flex-basis: 50%;
+	}
 }
 @media (min-width: 850px) { 
+	li{
+		flex-basis: 33%;
+	}
 }
